<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >
        <EditText
            android:autofillHints="求助信息"
            android:inputType="text"
            android:id="@+id/gms_text"
            android:hint="@string/emergence_gms_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/GmsReceiver"
            android:layout_weight="0.1"
            />

       </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contact_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:id="@+id/button_add_contact"
                android:layout_weight="0.7" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/edit"
                android:id="@+id/button_edit_contact"
                android:layout_weight="0.7"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button_delete_contact"
                android:text="@string/delete"
                android:layout_weight="0.7"
                />
        </LinearLayout>
    </LinearLayout>
</android.widget.LinearLayout>